--- a/src/MinhasFinancas.CrossCutting.Ioc/MinhasFinancas.CrossCutting.Ioc.csproj
+++ b/src/MinhasFinancas.CrossCutting.Ioc/MinhasFinancas.CrossCutting.Ioc.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModel\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MinhasFinancas.Domain\MinhasFinancas.Domain.csproj" />
-    <ProjectReference Include="..\MinhasFinancas.Infra.Data\MinhasFinancas.Infra.Data.csproj" />
+    <ProjectReference Include="..\MinhasFinancas.Service\MinhasFinancas.Service.csproj" />
   </ItemGroup>
 
 </Project>
